parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 58
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On toplevel shift to state 75
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MultiLetExpr shift to state 76
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 78
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23

State 1:
AExpr -> TRUE . [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE reduce production AExpr -> TRUE 
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On OROR reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On LPAREN reduce production AExpr -> TRUE 
-- On LET reduce production AExpr -> TRUE 
-- On INTV reduce production AExpr -> TRUE 
-- On IN reduce production AExpr -> TRUE 
-- On ID reduce production AExpr -> TRUE 
-- On FALSE reduce production AExpr -> TRUE 
-- On EQ reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 
-- On ANDAND reduce production AExpr -> TRUE 

State 2:
AExpr -> LPAREN . Expr RPAREN [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 56
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23

State 3:
LetExpr -> LET . ID EQ Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
LetRecExpr -> LET . REC ID EQ FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On REC shift to state 4
-- On ID shift to state 51

State 4:
LetRecExpr -> LET REC . ID EQ FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ID shift to state 5

State 5:
LetRecExpr -> LET REC ID . EQ FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On EQ shift to state 6

State 6:
LetRecExpr -> LET REC ID EQ . FUN ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On FUN shift to state 7

State 7:
LetRecExpr -> LET REC ID EQ FUN . ID RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ID shift to state 8

State 8:
LetRecExpr -> LET REC ID EQ FUN ID . RARROW Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On RARROW shift to state 9

State 9:
LetRecExpr -> LET REC ID EQ FUN ID RARROW . Expr IN Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 48
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23

State 10:
AExpr -> INTV . [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE reduce production AExpr -> INTV 
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On OROR reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On LPAREN reduce production AExpr -> INTV 
-- On LET reduce production AExpr -> INTV 
-- On INTV reduce production AExpr -> INTV 
-- On IN reduce production AExpr -> INTV 
-- On ID reduce production AExpr -> INTV 
-- On FALSE reduce production AExpr -> INTV 
-- On EQ reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 
-- On ANDAND reduce production AExpr -> INTV 

State 11:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 43
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23

State 12:
AExpr -> ID . [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE reduce production AExpr -> ID 
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On OROR reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On LPAREN reduce production AExpr -> ID 
-- On LET reduce production AExpr -> ID 
-- On INTV reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ID reduce production AExpr -> ID 
-- On FALSE reduce production AExpr -> ID 
-- On EQ reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On ANDAND reduce production AExpr -> ID 

State 13:
FunExpr -> FUN . ID RARROW Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ID shift to state 14

State 14:
FunExpr -> FUN ID . RARROW Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On RARROW shift to state 15

State 15:
FunExpr -> FUN ID RARROW . Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 41
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23

State 16:
AExpr -> FALSE . [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE reduce production AExpr -> FALSE 
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On OROR reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On LPAREN reduce production AExpr -> FALSE 
-- On LET reduce production AExpr -> FALSE 
-- On INTV reduce production AExpr -> FALSE 
-- On IN reduce production AExpr -> FALSE 
-- On ID reduce production AExpr -> FALSE 
-- On FALSE reduce production AExpr -> FALSE 
-- On EQ reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 
-- On ANDAND reduce production AExpr -> FALSE 

State 17:
LTExpr -> PExpr . LT PExpr [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
LTExpr -> PExpr . [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS OROR LT LET IN EQ ELSE ANDAND ]
-- On PLUS shift to state 18
-- On LT shift to state 25
-- On THEN reduce production LTExpr -> PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr 
-- On RPAREN reduce production LTExpr -> PExpr 
-- On OROR reduce production LTExpr -> PExpr 
-- On LET reduce production LTExpr -> PExpr 
-- On IN reduce production LTExpr -> PExpr 
-- On EQ reduce production LTExpr -> PExpr 
-- On ELSE reduce production LTExpr -> PExpr 
-- On ANDAND reduce production LTExpr -> PExpr 

State 18:
PExpr -> PExpr PLUS . MExpr [ THEN SEMISEMI RPAREN PLUS OROR LT LET IN EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On MExpr shift to state 19
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 19:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS OROR MULT LT LET IN EQ ELSE ANDAND ]
PExpr -> PExpr PLUS MExpr . [ THEN SEMISEMI RPAREN PLUS OROR LT LET IN EQ ELSE ANDAND ]
-- On MULT shift to state 20
-- On THEN reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On PLUS reduce production PExpr -> PExpr PLUS MExpr 
-- On OROR reduce production PExpr -> PExpr PLUS MExpr 
-- On LT reduce production PExpr -> PExpr PLUS MExpr 
-- On LET reduce production PExpr -> PExpr PLUS MExpr 
-- On IN reduce production PExpr -> PExpr PLUS MExpr 
-- On EQ reduce production PExpr -> PExpr PLUS MExpr 
-- On ELSE reduce production PExpr -> PExpr PLUS MExpr 
-- On ANDAND reduce production PExpr -> PExpr PLUS MExpr 

State 20:
MExpr -> MExpr MULT . AppExpr [ THEN SEMISEMI RPAREN PLUS OROR MULT LT LET IN EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On AppExpr shift to state 21
-- On AExpr shift to state 23

State 21:
AppExpr -> AppExpr . AExpr [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
MExpr -> MExpr MULT AppExpr . [ THEN SEMISEMI RPAREN PLUS OROR MULT LT LET IN EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On AExpr shift to state 22
-- On THEN reduce production MExpr -> MExpr MULT AppExpr 
-- On SEMISEMI reduce production MExpr -> MExpr MULT AppExpr 
-- On RPAREN reduce production MExpr -> MExpr MULT AppExpr 
-- On PLUS reduce production MExpr -> MExpr MULT AppExpr 
-- On OROR reduce production MExpr -> MExpr MULT AppExpr 
-- On MULT reduce production MExpr -> MExpr MULT AppExpr 
-- On LT reduce production MExpr -> MExpr MULT AppExpr 
-- On LET reduce production MExpr -> MExpr MULT AppExpr 
-- On IN reduce production MExpr -> MExpr MULT AppExpr 
-- On EQ reduce production MExpr -> MExpr MULT AppExpr 
-- On ELSE reduce production MExpr -> MExpr MULT AppExpr 
-- On ANDAND reduce production MExpr -> MExpr MULT AppExpr 

State 22:
AppExpr -> AppExpr AExpr . [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE reduce production AppExpr -> AppExpr AExpr 
-- On THEN reduce production AppExpr -> AppExpr AExpr 
-- On SEMISEMI reduce production AppExpr -> AppExpr AExpr 
-- On RPAREN reduce production AppExpr -> AppExpr AExpr 
-- On PLUS reduce production AppExpr -> AppExpr AExpr 
-- On OROR reduce production AppExpr -> AppExpr AExpr 
-- On MULT reduce production AppExpr -> AppExpr AExpr 
-- On LT reduce production AppExpr -> AppExpr AExpr 
-- On LPAREN reduce production AppExpr -> AppExpr AExpr 
-- On LET reduce production AppExpr -> AppExpr AExpr 
-- On INTV reduce production AppExpr -> AppExpr AExpr 
-- On IN reduce production AppExpr -> AppExpr AExpr 
-- On ID reduce production AppExpr -> AppExpr AExpr 
-- On FALSE reduce production AppExpr -> AppExpr AExpr 
-- On EQ reduce production AppExpr -> AppExpr AExpr 
-- On ELSE reduce production AppExpr -> AppExpr AExpr 
-- On ANDAND reduce production AppExpr -> AppExpr AExpr 

State 23:
AppExpr -> AExpr . [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
-- On TRUE reduce production AppExpr -> AExpr 
-- On THEN reduce production AppExpr -> AExpr 
-- On SEMISEMI reduce production AppExpr -> AExpr 
-- On RPAREN reduce production AppExpr -> AExpr 
-- On PLUS reduce production AppExpr -> AExpr 
-- On OROR reduce production AppExpr -> AExpr 
-- On MULT reduce production AppExpr -> AExpr 
-- On LT reduce production AppExpr -> AExpr 
-- On LPAREN reduce production AppExpr -> AExpr 
-- On LET reduce production AppExpr -> AExpr 
-- On INTV reduce production AppExpr -> AExpr 
-- On IN reduce production AppExpr -> AExpr 
-- On ID reduce production AppExpr -> AExpr 
-- On FALSE reduce production AppExpr -> AExpr 
-- On EQ reduce production AppExpr -> AExpr 
-- On ELSE reduce production AppExpr -> AExpr 
-- On ANDAND reduce production AppExpr -> AExpr 

State 24:
AppExpr -> AppExpr . AExpr [ TRUE THEN SEMISEMI RPAREN PLUS OROR MULT LT LPAREN LET INTV IN ID FALSE EQ ELSE ANDAND ]
MExpr -> AppExpr . [ THEN SEMISEMI RPAREN PLUS OROR MULT LT LET IN EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On AExpr shift to state 22
-- On THEN reduce production MExpr -> AppExpr 
-- On SEMISEMI reduce production MExpr -> AppExpr 
-- On RPAREN reduce production MExpr -> AppExpr 
-- On PLUS reduce production MExpr -> AppExpr 
-- On OROR reduce production MExpr -> AppExpr 
-- On MULT reduce production MExpr -> AppExpr 
-- On LT reduce production MExpr -> AppExpr 
-- On LET reduce production MExpr -> AppExpr 
-- On IN reduce production MExpr -> AppExpr 
-- On EQ reduce production MExpr -> AppExpr 
-- On ELSE reduce production MExpr -> AppExpr 
-- On ANDAND reduce production MExpr -> AppExpr 

State 25:
LTExpr -> PExpr LT . PExpr [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 26
-- On MExpr shift to state 27
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 26:
LTExpr -> PExpr LT PExpr . [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS OROR LET IN EQ ELSE ANDAND ]
-- On PLUS shift to state 18
-- On THEN reduce production LTExpr -> PExpr LT PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr LT PExpr 
-- On RPAREN reduce production LTExpr -> PExpr LT PExpr 
-- On OROR reduce production LTExpr -> PExpr LT PExpr 
-- On LET reduce production LTExpr -> PExpr LT PExpr 
-- On IN reduce production LTExpr -> PExpr LT PExpr 
-- On EQ reduce production LTExpr -> PExpr LT PExpr 
-- On ELSE reduce production LTExpr -> PExpr LT PExpr 
-- On ANDAND reduce production LTExpr -> PExpr LT PExpr 

State 27:
MExpr -> MExpr . MULT AppExpr [ THEN SEMISEMI RPAREN PLUS OROR MULT LT LET IN EQ ELSE ANDAND ]
PExpr -> MExpr . [ THEN SEMISEMI RPAREN PLUS OROR LT LET IN EQ ELSE ANDAND ]
-- On MULT shift to state 20
-- On THEN reduce production PExpr -> MExpr 
-- On SEMISEMI reduce production PExpr -> MExpr 
-- On RPAREN reduce production PExpr -> MExpr 
-- On PLUS reduce production PExpr -> MExpr 
-- On OROR reduce production PExpr -> MExpr 
-- On LT reduce production PExpr -> MExpr 
-- On LET reduce production PExpr -> MExpr 
-- On IN reduce production PExpr -> MExpr 
-- On EQ reduce production PExpr -> MExpr 
-- On ELSE reduce production PExpr -> MExpr 
-- On ANDAND reduce production PExpr -> MExpr 

State 28:
Expr -> OrExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
OrExpr -> OrExpr . OROR AndExpr [ THEN SEMISEMI RPAREN OROR LET IN ELSE ]
-- On OROR shift to state 29
-- On THEN reduce production Expr -> OrExpr 
-- On SEMISEMI reduce production Expr -> OrExpr 
-- On RPAREN reduce production Expr -> OrExpr 
-- On LET reduce production Expr -> OrExpr 
-- On IN reduce production Expr -> OrExpr 
-- On ELSE reduce production Expr -> OrExpr 

State 29:
OrExpr -> OrExpr OROR . AndExpr [ THEN SEMISEMI RPAREN OROR LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On MExpr shift to state 27
-- On LTExpr shift to state 30
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 34
-- On AExpr shift to state 23

State 30:
EqExpr -> LTExpr . [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
-- On THEN reduce production EqExpr -> LTExpr 
-- On SEMISEMI reduce production EqExpr -> LTExpr 
-- On RPAREN reduce production EqExpr -> LTExpr 
-- On OROR reduce production EqExpr -> LTExpr 
-- On LET reduce production EqExpr -> LTExpr 
-- On IN reduce production EqExpr -> LTExpr 
-- On EQ reduce production EqExpr -> LTExpr 
-- On ELSE reduce production EqExpr -> LTExpr 
-- On ANDAND reduce production EqExpr -> LTExpr 

State 31:
AndExpr -> EqExpr . [ THEN SEMISEMI RPAREN OROR LET IN ELSE ANDAND ]
EqExpr -> EqExpr . EQ LTExpr [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
-- On EQ shift to state 32
-- On THEN reduce production AndExpr -> EqExpr 
-- On SEMISEMI reduce production AndExpr -> EqExpr 
-- On RPAREN reduce production AndExpr -> EqExpr 
-- On OROR reduce production AndExpr -> EqExpr 
-- On LET reduce production AndExpr -> EqExpr 
-- On IN reduce production AndExpr -> EqExpr 
-- On ELSE reduce production AndExpr -> EqExpr 
-- On ANDAND reduce production AndExpr -> EqExpr 

State 32:
EqExpr -> EqExpr EQ . LTExpr [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On MExpr shift to state 27
-- On LTExpr shift to state 33
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 33:
EqExpr -> EqExpr EQ LTExpr . [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
-- On THEN reduce production EqExpr -> EqExpr EQ LTExpr 
-- On SEMISEMI reduce production EqExpr -> EqExpr EQ LTExpr 
-- On RPAREN reduce production EqExpr -> EqExpr EQ LTExpr 
-- On OROR reduce production EqExpr -> EqExpr EQ LTExpr 
-- On LET reduce production EqExpr -> EqExpr EQ LTExpr 
-- On IN reduce production EqExpr -> EqExpr EQ LTExpr 
-- On EQ reduce production EqExpr -> EqExpr EQ LTExpr 
-- On ELSE reduce production EqExpr -> EqExpr EQ LTExpr 
-- On ANDAND reduce production EqExpr -> EqExpr EQ LTExpr 

State 34:
AndExpr -> AndExpr . ANDAND EqExpr [ THEN SEMISEMI RPAREN OROR LET IN ELSE ANDAND ]
OrExpr -> OrExpr OROR AndExpr . [ THEN SEMISEMI RPAREN OROR LET IN ELSE ]
-- On ANDAND shift to state 35
-- On THEN reduce production OrExpr -> OrExpr OROR AndExpr 
-- On SEMISEMI reduce production OrExpr -> OrExpr OROR AndExpr 
-- On RPAREN reduce production OrExpr -> OrExpr OROR AndExpr 
-- On OROR reduce production OrExpr -> OrExpr OROR AndExpr 
-- On LET reduce production OrExpr -> OrExpr OROR AndExpr 
-- On IN reduce production OrExpr -> OrExpr OROR AndExpr 
-- On ELSE reduce production OrExpr -> OrExpr OROR AndExpr 

State 35:
AndExpr -> AndExpr ANDAND . EqExpr [ THEN SEMISEMI RPAREN OROR LET IN ELSE ANDAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 10
-- On ID shift to state 12
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On MExpr shift to state 27
-- On LTExpr shift to state 30
-- On EqExpr shift to state 36
-- On AppExpr shift to state 24
-- On AExpr shift to state 23

State 36:
AndExpr -> AndExpr ANDAND EqExpr . [ THEN SEMISEMI RPAREN OROR LET IN ELSE ANDAND ]
EqExpr -> EqExpr . EQ LTExpr [ THEN SEMISEMI RPAREN OROR LET IN EQ ELSE ANDAND ]
-- On EQ shift to state 32
-- On THEN reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On SEMISEMI reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On RPAREN reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On OROR reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On LET reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On IN reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On ELSE reduce production AndExpr -> AndExpr ANDAND EqExpr 
-- On ANDAND reduce production AndExpr -> AndExpr ANDAND EqExpr 

State 37:
Expr -> LetRecExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> LetRecExpr 
-- On SEMISEMI reduce production Expr -> LetRecExpr 
-- On RPAREN reduce production Expr -> LetRecExpr 
-- On LET reduce production Expr -> LetRecExpr 
-- On IN reduce production Expr -> LetRecExpr 
-- On ELSE reduce production Expr -> LetRecExpr 

State 38:
Expr -> LetExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> LetExpr 
-- On SEMISEMI reduce production Expr -> LetExpr 
-- On RPAREN reduce production Expr -> LetExpr 
-- On LET reduce production Expr -> LetExpr 
-- On IN reduce production Expr -> LetExpr 
-- On ELSE reduce production Expr -> LetExpr 

State 39:
Expr -> IfExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> IfExpr 
-- On SEMISEMI reduce production Expr -> IfExpr 
-- On RPAREN reduce production Expr -> IfExpr 
-- On LET reduce production Expr -> IfExpr 
-- On IN reduce production Expr -> IfExpr 
-- On ELSE reduce production Expr -> IfExpr 

State 40:
Expr -> FunExpr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production Expr -> FunExpr 
-- On SEMISEMI reduce production Expr -> FunExpr 
-- On RPAREN reduce production Expr -> FunExpr 
-- On LET reduce production Expr -> FunExpr 
-- On IN reduce production Expr -> FunExpr 
-- On ELSE reduce production Expr -> FunExpr 

State 41:
FunExpr -> FUN ID RARROW Expr . [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN reduce production FunExpr -> FUN ID RARROW Expr 
-- On SEMISEMI reduce production FunExpr -> FUN ID RARROW Expr 
-- On RPAREN reduce production FunExpr -> FUN ID RARROW Expr 
-- On LET reduce production FunExpr -> FUN ID RARROW Expr 
-- On IN reduce production FunExpr -> FUN ID RARROW Expr 
-- On ELSE reduce production FunExpr -> FUN ID RARROW Expr 

State 42:
AndExpr -> AndExpr . ANDAND EqExpr [ THEN SEMISEMI RPAREN OROR LET IN ELSE ANDAND ]
OrExpr -> AndExpr . [ THEN SEMISEMI RPAREN OROR LET IN ELSE ]
-- On ANDAND shift to state 35
-- On THEN reduce production OrExpr -> AndExpr 
-- On SEMISEMI reduce production OrExpr -> AndExpr 
-- On RPAREN reduce production OrExpr -> AndExpr 
-- On OROR reduce production OrExpr -> AndExpr 
-- On LET reduce production OrExpr -> AndExpr 
-- On IN reduce production OrExpr -> AndExpr 
-- On ELSE reduce production OrExpr -> AndExpr 

State 43:
IfExpr -> IF Expr . THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On THEN shift to state 44

State 44:
IfExpr -> IF Expr THEN . Expr ELSE Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 45
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23

State 45:
IfExpr -> IF Expr THEN Expr . ELSE Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On ELSE shift to state 46

State 46:
IfExpr -> IF Expr THEN Expr ELSE . Expr [ THEN SEMISEMI RPAREN LET IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 10
-- On IF shift to state 11
-- On ID shift to state 12
-- On FUN shift to state 13
-- On FALSE shift to state 16
-- On PExpr shift to state 17
-- On OrExpr shift to state 28
-- On MExpr shift to state 27
-- On LetRecExpr shift to state 37
-- On LetExpr shift to state 38
-- On LTExpr shift to state 30
-- On IfExpr shift to state 39
-- On FunExpr shift to state 40
-- On Expr shift to state 47
-- On EqExpr shift to state 31
-- On AppExpr shift to state 24
-- On AndExpr shift to state 42
-- On AExpr shift to state 23
